--- a/spring-mvc-demo-v1/.settings/org.eclipse.wst.common.component
+++ b/spring-mvc-demo-v1/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="spring-mvc-demo-v1">
+        
+    <wb-module deploy-name="spring-mvc-project">
+                
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="spring-mvc-demo-v1"/>
-        <property name="java-output-path" value="/spring-mvc-demo-v1/build/classes"/>
+                
+        <property name="java-output-path" value="/spring-mvc-project/build/classes"/>
+        <property name="context-root" value="spring-mvc-project"/>
+            
     </wb-module>
+    
 </project-modules>
